<resources>
    <string name="app_name">Talabat Lite</string>
    <string name="server_ip_address_label">Server IP Address:</string>
    <string name="enter_ip_address_hint">Enter IP Address</string>
    <string name="port_number_label">Port Number:</string>
    <string name="enter_port_number_hint">Enter Port Number</string>
    <string name="connect_server_button_label">Connect</string>
    <string name="loginLabelText">Login</string>
    <string name="hintEmailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="loginButton">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="profile">profile</string>
    <string name="home_fragment">Home fragment</string>
    <string name="orders_fragment">Orders fragment</string>
    <string name="ScrollView">ScrollView</string>
    <string name="todo">TODO</string>
    <string name="business_name">Business name</string>
    <string name="business_type_field">Business Type</string>
    <string name="keywords">Keywords</string>
    <string name="pickup_address">Pickup Address : </string>
    <string name="keywords_field">Keywords</string>
    <string name="pickup_address_field">Pickup address</string>
    <string name="business_type">Business type</string>
    <string name="delete">delete</string>
    <string name="item_image">Item image</string>
    <string name="Profile">Profile\n</string>
    <string name="search_fragment">Search fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete</string>
    <string name="item_description">Item Description</string>
    <string name="todo_o">TODO</string>
    <string name="item_name">Item Name</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="merchant_profile_picture">Merchant profile picture</string>
    <string name="rating_4_5">Rating: 4.5</string>
    <string name="date_created">Date Created</string>
    <string name="order_status">Order Status</string>
    <string name="ordey_summary">Ordey Summary</string>
    <string name="customer_address">Customer Address :</string>
    <string name="refresh">Refresh</string>
    <string name="total">Total :</string>
    <string name="click">Click</string>
    <string name="continue1">Continue</string>
    <string name="accept_order">Accept Order</string>
    <string name="courier_name">Courier Name</string>
    <string name="your_name">Your Name</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="national_id">National ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="merchant">Merchant :</string>
    <string name="order_id">Order ID :</string>
    <string name="merchant_log_out">Log out</string>
    <string name="customer_log_out">Log out</string>
    <string name="log_out">Log out</string>
    <string name="order_summary">Order Summary</string>
</resources>