<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="120dp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ItemManagementActivity">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/todo_o"
        android:scaleType="centerCrop"/>

    <!-- Item Name -->
    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/item_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Item Description -->
    <TextView
        android:id="@+id/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item_description"
        android:textSize="16sp" />

    <!-- Item Price -->
    <TextView
        android:id="@+id/item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price_0_00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Counter and Add to Cart Section -->

    <!-- Add to Cart Button -->
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_item" />

</LinearLayout>