<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- IP Address Input -->
    <TextView
        android:id="@+id/textViewIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_ip_address_label"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextIp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_ip_address_hint"
        android:inputType="textUri"
        android:padding="12dp" />

    <!-- Port Number Input -->
    <TextView
        android:id="@+id/textViewPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/port_number_label"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/editTextPort"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_port_number_hint"
        android:inputType="number"
        android:padding="12dp" />

    <!-- Connect Button -->
    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/connect_server_button_label" />

</LinearLayout>
