<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/ScrollView"
    tools:context=".MerchantProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:id="@+id/profile_icon"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/profile_icon" />

            <TextView
                android:id="@+id/profileBusinessName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/business_name"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="TextSizeCheck" />

        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/businessTypeField"
                android:hint="@string/business_type"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileBusinessType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@string/business_type_field"
                    tools:ignore="VisualLintTextFieldSize">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/keywordsField"
                android:hint="@string/keywords_field"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileKeywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@string/keywords"
                    tools:ignore="VisualLintTextFieldSize">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pickupAddressField"
                android:hint="@string/pickup_address_field"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profilePickupAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@string/pickup_address"
                    tools:ignore="VisualLintTextFieldSize">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/changeAddressButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Change address"
                android:textSize="18sp"
                tools:ignore="HardcodedText,VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
