<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:background="@drawable/login_image"
            android:layout_height="200dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="447dp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/loginLabelText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:hint="@string/hintEmailLogin"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints=""
                android:background="@drawable/edit_text_bg"
                android:hint="@string/passwordLogin"
                android:inputType="textPassword"
                android:padding="12dp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:text="@string/loginButton"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/login_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@android:color/holo_blue_dark" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="62dp"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:indeterminate="true"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
