<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    tools:context=".OrderDetailsActivity">

    <LinearLayout
        android:id="@+id/orderIdLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/orderIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order ID : "
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/orderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/merchantInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orderIdLinear"
        android:orientation="horizontal"
        android:padding="24dp">

        <!-- Merchant Profile Picture -->
        <ImageView
            android:id="@+id/merchantProfilePicture"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/merchant_profile_picture"
            android:elevation="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_icon" />

        <!-- Merchant Name and Rating -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/merchantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merchant_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order_status"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/createdAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/date_created"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/pickupAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/merchantInfoLayout"
        android:padding="10dp">
        <TextView
            android:id="@+id/pickupAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_address"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pickupAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/customerAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/pickupAddressLayout"
        android:padding="10dp">
        <TextView
            android:id="@+id/customerAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_address"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/customerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/orderSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/customerAddressLayout"
        android:gravity="start"
        android:text = "@string/ordey_summary"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/itemsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/orderSummary"
        tools:listitem="@layout/item_order_row" />
    <LinearLayout
        android:id="@+id/totalAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/itemsRecyclerView"
        android:padding="10dp">
        <TextView
            android:id="@+id/totalAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text ="550.5 EGP"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/totalAmountLayout"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/click"
        />

</RelativeLayout>
